SA: wrong size computation when JVM was built without AOT

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b20

      When the JVM was built without AOT we observed the following test failure (note that AOT is currently unsupported on some platforms like e.g. PPC64):

      TestInstanceKlassSize was failing because of wrong size computation.
      The problem is that the implementations in the following files don't fit together:

      src/hotspot/share/oops/instanceKlass.cpp:
      bool InstanceKlass::should_store_fingerprint(bool is_hidden_or_anonymous)
      bool InstanceKlass::has_stored_fingerprint()
      They always return false when built without AOT.

      src/jdk.hotspot.agent/share/classes/sun/jvm/hotspot/oops/InstanceKlass.java:
      public static boolean shouldStoreFingerprint()
      public boolean hasStoredFingerprint()
      They return true in some cases regardless of whether JVM was built without AOT or not.

            Assignee:
            Martin Doerr
            Reporter:
            Martin Doerr
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: