8253900: SA: wrong size computation when JVM was built without AOT

The code hasStoredFingerprint() at InstanceKlass.java is not considering
AOT disabled at compilation time, like has_stored_fingerprint() at
instanceKlass.cpp does. Such difference can cause TestInstanceKlassSize
failures because all objects will have an extra 8-bytes.

TestInstanceKlassSize and TestInstanceKlassSizeForInterface were removed
from ProblemList.txt because it cannot be reproduced after this change,
but, if JDK-8230664 starts to reproduce again, these tests can be
disabled.